--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
     <link rel="stylesheet" href="https://www.w3schools.com/w3css/4/w3.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Syne">
     <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
-    <title>Links website</title>
+    <title>Oronno</title>
     <style>
     
     html {
@@ -58,7 +58,7 @@
      
       <!-- Content. Add your bio here. -->
       <div class="w3-margin">
-      <p class="w3-large w3-text-black"><strong>WELCOME!</strong></p>
+      <p class="w3-large w3-text-black"><strong>Rezuan Oronno</strong></p>
       <p class="w3-tag w3-text-white">Check out my photos.</p>
       </div>
  
