--- a/index.html
+++ b/index.html
@@ -65,9 +65,9 @@
      <!-- Links section 1. Replace the # inside of the "" with your links. -->
      <div class="links-container">
        <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Travel</a>
-       <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Experiences</a>
+       <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Workout</a>
        <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Creative</a>
-       <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Blog</a>
+       <a href="#" class="w3-button w3-hover-blue w3-large w3-yellow" style="width: 350px;" target="_blank"></i>Flavorful Journey</a>
      
  
        <!-- Add links to your social networks here. -->
