--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
  
        <!-- Add links to your social networks here. -->
          <div class="w3-container w3-xlarge w3-padding w3-margin">
-           <i class="fa fa-facebook-official w3-hover-opacity"></i>
+           <i class="https://www.facebook.com/profile.php?id=100093548627897"></i>
            <i class="fa fa-instagram w3-hover-opacity"></i>
            <i class="fa fa-snapchat w3-hover-opacity"></i>
            <i class="fa fa-pinterest-p w3-hover-opacity"></i>
